--- a/.babelrc
+++ b/.babelrc
@@ -1,25 +1,14 @@
 {
     "presets": [
         [
-            "es2015",
+            "babel-preset-es2015",
             {
-                "modules": "umd"
+                "modules": false
             }
         ],
         "stage-1"
     ],
-    "env": {
-        "test": {
-            "presets": [
-                "es2015",
-                "react",
-                "stage-1"
-            ]
-        },
-        "dev": {
-            "plugins": [
-                "react-hot-loader/babel"
-            ]
-        }
-    }
+    "plugins": [
+        "babel-plugin-transform-runtime"
+    ]
 }
