--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "responsive-redux",
   "version": "1.0.1",
   "description": "Responsive state management for redux. Works with React and React Native.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "standard": {
     "parser": "babel-eslint"
   },
@@ -12,8 +12,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "eslint-config-react": "^1.1.7",
@@ -48,5 +48,17 @@
   "bugs": {
     "url": "https://github.com/markallancourtney/responsive-redux/issues"
   },
-  "homepage": "https://github.com/markallancourtney/responsive-redux#readme"
+  "homepage": "https://github.com/markallancourtney/responsive-redux#readme",
+  "__babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
+  }
 }
